// Generated by github.com/davyxu/tabtoy
// Version: 2.8.9
// DO NOT EDIT!!

syntax = "proto3";

package gameconf;

import "gameconf/game_type.proto";



// Defined in table: GameBaseConfig
message GameBaseConfig
{	
	
	
	repeated DoNotUseThisDefine DoNotUseThis = 1; // DoNotUseThis
	
	
	repeated SkillConfDefine SkillConf = 2; // SkillConf
	
	
	repeated SkillEffectConfDefine SkillEffectConf = 3; // SkillEffectConf
	
	
	repeated GeneralConfDefine GeneralConf = 4; // GeneralConf

}

// Defined in table: SkillConf
message SkillEffect
{	
	
	// 效果对象
	SkillEffectObjectTyp Object = 1; 
	
	// 最短持续时间
	int32 Min = 2; 
	
	// 最长持续时间
	int32 Max = 3; 
	
	// 触发概率
	int32 Chance = 4; 
	
	// 等级
	int32 Power = 5; 
	
	// 效果ID
	uint32 Id = 6; 

}

// Defined in table: SkillConf
message SkillConfDefine
{	
	
	
	uint32 SkillID = 1; // 技能唯一ID
	
	
	string SkillName = 2; // 技能名
	
	
	SkillTyp SkillType = 3; // 技能属性
	
	
	SkillAttackTyp SkillAttackType = 4; // 技能攻击类型
	
	
	uint32 Power = 5; // 技能威力
	
	
	repeated SkillEffect Effect = 6; // 特殊效果

}

// Defined in table: SkillEffectConf
message SkillEffectConfDefine
{	
	
	
	uint32 SkillEffectID = 1; // 技能效果唯一ID
	
	
	string SkillName = 2; // 效果名
	
	
	SkillEffectTyp SkillEffectType = 3; // 效果类型
	
	
	int32 LevelUp = 4; 

}

// Defined in table: GeneralConf
message Learn
{	
	
	// 等级
	uint32 Level = 1; 
	
	// 技能
	uint32 SkillID = 2; 

}

// Defined in table: GeneralConf
message GeneralConfDefine
{	
	
	
	uint32 GeneralID = 1; // 武将唯一ID
	
	
	string GeneralName = 2; // 武将名称
	
	
	int32 Hp = 3; // 血量种族
	
	
	int32 Atk = 4; // 攻击种族
	
	
	int32 Def = 5; // 防御种族
	
	
	int32 Satk = 6; // 特攻种族
	
	
	int32 Sdef = 7; // 特防种族
	
	
	int32 Spd = 8; // 速度
	
	
	repeated Learn LearnSkills = 9; // 学习技能
	
	
	repeated uint32 BaseSkills = 10; // 初始技能

}

