// Generated by github.com/davyxu/tabtoy
// Version: 2.8.9
// DO NOT EDIT!!

syntax = "proto3";

package gameconf;


// Defined in table: DoNotUseThis
enum SkillTyp
{	

	
	STInvalid = 0; // 技能属性系

	// 普通
	STNormal = 1; 

	// 火
	STFire = 2; 

	// 水
	STWater = 3; 

	// 草
	STGrass = 4; 

}

// Defined in table: DoNotUseThis
enum SkillAttackTyp
{	

	
	SATInvliad = 0; // 技能攻击类型

	// 物理
	SATAttack = 1; 

	// 特攻
	SATSpecial = 2; 

	// 变化
	SATChange = 3; 

}

// Defined in table: DoNotUseThis
enum SkillEffectObjectTyp
{	

	
	SEOTInvalid = 0; // 技能生效对象

	// 己方
	SEOTSelf = 1; 

	// 对方
	SEOTOpponent = 2; 

}

// Defined in table: DoNotUseThis
enum SkillEffectTyp
{	

	
	SETInvliad = 0; // 技能效果类型

	// 灼烧
	SETFire = 1; 

	// 攻击变化
	SETAttack = 2; 

}


// Defined in table: DoNotUseThis
message DoNotUseThis
{	
	
	
	repeated DoNotUseThisDefine DoNotUseThis = 1; // DoNotUseThis

}

// Defined in table: DoNotUseThis
message DoNotUseThisDefine
{	
	
	
	int32 ConfID = 1; // 唯一ID

}

